--- a/xll_variate.vcxproj
+++ b/xll_variate.vcxproj
@@ -178,14 +178,13 @@
     <None Include="setup.bat" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="xll_variate.h" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="xll\xll.vcxproj">
       <Project>{367249bb-b8a3-4671-b095-a5db904dbd6d}</Project>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="xll_variate.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionTargets" />
 </Project>
