--- a/xll_variate.vcxproj.filters
+++ b/xll_variate.vcxproj.filters
@@ -21,11 +21,15 @@
     <ClCompile Include="xll_variate_normal.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="xll_variate_logistic.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="setup.bat">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="xll_variate.h">
