iota and hypergeometric

--- a/xll_variate.vcxproj.filters
+++ b/xll_variate.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="xll_variate_logistic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="xll_array.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="xll_hypergeometric.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="setup.bat">
