--- a/xll_variate.vcxproj
+++ b/xll_variate.vcxproj
@@ -176,6 +176,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="xll_array.cpp" />
+    <ClCompile Include="xll_hypergeometric.cpp" />
     <ClCompile Include="xll_variate.cpp" />
     <ClCompile Include="xll_variate_logistic.cpp" />
     <ClCompile Include="xll_variate_normal.cpp" />
