special functions namespace fms::sf timing functions

--- a/fms_variate/fms_variate.vcxproj
+++ b/fms_variate/fms_variate.vcxproj
@@ -145,7 +145,7 @@
   <ItemGroup>
     <ClCompile Include="fms_variate.cpp" />
     <ClCompile Include="fms_variate_constant.t.cpp" />
-    <ClCompile Include="fms_variate_hypergeometric.t.cpp" />
+    <ClCompile Include="fms_sf_hypergeometric.t.cpp" />
     <ClCompile Include="fms_variate_logistic.t.cpp" />
     <ClCompile Include="fms_variate_normal.t.cpp" />
   </ItemGroup>
@@ -155,7 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="fms_ensure.h" />
-    <ClInclude Include="fms_hypergeometric.h" />
+    <ClInclude Include="fms_sf_hypergeometric.h" />
     <ClInclude Include="fms_test.h" />
     <ClInclude Include="fms_variate_constant.h" />
     <ClInclude Include="fms_variate_logistic.h" />
