--- a/fms_variate/fms_variate.vcxproj.filters
+++ b/fms_variate/fms_variate.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="fms_variate_logistic.t.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="fms_variate_hypergeometric.t.cpp">
+    <ClCompile Include="fms_sf_hypergeometric.t.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -54,7 +54,7 @@
     <ClInclude Include="fms_ensure.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="fms_hypergeometric.h">
+    <ClInclude Include="fms_sf_hypergeometric.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
