--- a/xll_variate.vcxproj
+++ b/xll_variate.vcxproj
@@ -177,7 +177,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="xll_array.cpp" />
-    <ClCompile Include="xll_hypergeometric.cpp" />
+    <ClCompile Include="xll_sf_hypergeometric.cpp" />
+    <ClCompile Include="xll_sf_beta.cpp" />
     <ClCompile Include="xll_variate.cpp" />
     <ClCompile Include="xll_variate_logistic.cpp" />
     <ClCompile Include="xll_variate_normal.cpp" />
