--- a/xll_variate.vcxproj.filters
+++ b/xll_variate.vcxproj.filters
@@ -27,7 +27,10 @@
     <ClCompile Include="xll_array.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="xll_hypergeometric.cpp">
+    <ClCompile Include="xll_sf_beta.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="xll_sf_hypergeometric.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
